resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-api
  namespace: staff-manager
  labels:
    app: sm-api
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sm-api
  template:
    metadata:
      labels:
        app: sm-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: topology.kubernetes.io/zone
      containers:
        - name: sm-api
          imagePullPolicy: Always
          image: mchekini/sm-api:1.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/health
              httpHeaders:
                - name: header1
                  value: "sm-header"
              port: 8080
            initialDelaySeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            successThreshold: 1
            failureThreshold: 30
            periodSeconds: 10
