resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: staff-manager
spec:
  ingressClassName: nginx
  rules:
    - host: api.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staff-manager-api
                port:
                  number: 8080
